--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
             <p class="para" style="margin: 2rem auto;">
                 Established in 2024, our hub serves as a connection point between tradition and modern convenience.
             </p>
-            <img src="Delivery_boy.jpg" alt="About Image"
+            <img src="Home_Page.jpg" alt="About Image"
                 style="max-width: 400px; border-radius: 1rem; margin-top: 2rem;">
         </section>
     </main>
