--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                 </div>
 
                 <div class="image-container">
-                    <img src="Delivery_boy.jpg" alt="Delivery_boy">
+                    <img src="Delivery_boy.jpg" alt="Delivery_boy"
+                    style="border-radius: 1rem;">
                 </div>
             </div>
         </section>
