added image folder

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
 
                 <div class="image-container">
-                    <img src="Delivery_boy.jpg" alt="Delivery_boy"
+                    <img src="images/Delivery_boy.jpg" alt="Delivery_boy"
                     style="border-radius: 1rem;">
                 </div>
             </div>
