--- a/menu.html
+++ b/menu.html
@@ -50,7 +50,7 @@
             <div class="menu-grid">
                 <!-- Food Item 1 -->
                 <div class="menu-card">
-                    <img src="Burger.png" alt="Burger" class="menu-img">
+                    <img src="images/Burger.png" alt="Burger" class="menu-img">
                     <div class="menu-info">
                         <h3>Classic Burger</h3>
                         <p class="menu-desc">Juicy beef patty with fresh lettuce and cheese.</p>
@@ -71,7 +71,7 @@
 
                 <!-- Food Item 2 -->
                 <div class="menu-card">
-                    <img src="Pizza.png" alt="Pizza" class="menu-img">
+                    <img src="images/Pizza.png" alt="Pizza" class="menu-img">
                     <div class="menu-info">
                         <h3>Pepperoni Pizza</h3>
                         <p class="menu-desc">Classic pepperoni with mozzarella cheese.</p>
@@ -92,7 +92,7 @@
 
                 <!-- Food Item 3 -->
                 <div class="menu-card">
-                    <img src="Salad.png" alt="Salad" class="menu-img">
+                    <img src="images/Salad.png" alt="Salad" class="menu-img">
                     <div class="menu-info">
                         <h3>Fresh Salad</h3>
                         <p class="menu-desc">Healthy mix of greens and seasonal vegetables.</p>
@@ -112,7 +112,7 @@
                 </div>
                 <!-- Food Item 4 -->
                 <div class="menu-card">
-                    <img src="Drink.png" alt="Drink" class="menu-img">
+                    <img src="images/Drink.png" alt="Drink" class="menu-img">
                     <div class="menu-info">
                         <h3>Drink</h3>
                         <p class="menu-desc">100+ varieties of drink that makes you refresh</p>
@@ -133,7 +133,7 @@
 
                 <!-- Food Item 5 -->
                 <div class="menu-card">
-                    <img src="Pasta.png" alt="Pasta" class="menu-img">
+                    <img src="images/Pasta.png" alt="Pasta" class="menu-img">
                     <div class="menu-info">
                         <h3>Creamy Pasta</h3>
                         <p class="menu-desc">Pasta in rich alfredo sauce.</p>
@@ -154,7 +154,7 @@
 
                 <!-- Food Item 6 -->
                 <div class="menu-card">
-                    <img src="Ice_Cream.png" alt="Ice Cream" class="menu-img">
+                    <img src="images/Ice_Cream.png" alt="Ice Cream" class="menu-img">
                     <div class="menu-info">
                         <h3>Ice Cream Sundae</h3>
                         <p class="menu-desc">Three scoops of ice cream with toppings.</p>
